Migrate to Sculpin 2.0

--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@ use:
     - posts
 ---
 <div class="blog-index">
-  {% assign index = true %}
+  {% set index = true %}
   {% for post in data.posts %}
     <article class="indexPost">
         <div class="meta">
